# ParcelMicroAnalysis

./: .gitignore  README.md  planning.md  pyproject.toml
data/: data_log.yaml  parcel_folder_org.py
parceltrack/: __init__.py
parceltrack/analysis/: extract_parcel_metadata.py  parcel_exploration.py  parcel_study slidedeck.md  proposalmapnotes.md
parceltrack/configs/: __init__.py  paths.py
parceltrack/io/: __init__.py  load_geometry.py
scripts/: load_parcels.py  project_setup.py
